[gd_scene load_steps=3 format=3 uid="uid://othrg6sq0vc"]

[ext_resource type="Script" uid="uid://cb1hyypjbnsim" path="res://scenes/menu.gd" id="1_vjb58"]
[ext_resource type="Material" uid="uid://rdhrhgrb78ls" path="res://addons/cyclops_level_builder/materials/grid.tres" id="1_yqeox"]

[node name="Menu" type="Node3D"]
script = ExtResource("1_vjb58")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
size = Vector3(20, 1, 20)
material = ExtResource("1_yqeox")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86102027, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -20.0
offset_right = 42.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="play" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="host" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="join" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="close" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "CLOSE"

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/close" to="." method="_on_close_pressed"]
